fix: remove double scroll-bar

--- a/src/components/PublishingInstructionsModal.module.css
+++ b/src/components/PublishingInstructionsModal.module.css
@@ -8,7 +8,7 @@
 .modalContent {
     padding: 20px;
     max-height: 70vh;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 
 .markdownContainer :global(pre) {
